Rename for Java 19